ajustes de importação e código